Add sleep predictions to overall result

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,11 +6,10 @@
    "source": [
     "# Ideas\n",
     "\n",
-    "- if 48 works, try 44 epoch of fold 2\n",
-    "- train on full data\n",
     "\n",
     "- different feature extractor type (LSTM, PANN, SpecFeatureExtractor)\n",
     "- different decoder type (MLP, LSTM)\n",
+    "- train on full data\n",
     "\n",
     "- different optimizer (Lion, Adam, SGD), increase WD\n",
     "- offset 25, 30 for your best model\n",
@@ -28,14 +27,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
+       "                (function() {\n",
+       "                    if (window.IPython === undefined) {\n",
+       "                        return\n",
+       "                    }\n",
+       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
+       "                        \"jupyter_black in a non-lab notebook with \" +\n",
+       "                        \"`is_lab=True`. Please double check, and if \" +\n",
+       "                        \"loading with `%load_ext` please review the README!\"\n",
+       "                    console.log(msg)\n",
+       "                    alert(msg)\n",
+       "                })()\n",
+       "                </script>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1320917/3400484906.py:36: UserWarning: \n",
+      "/tmp/ipykernel_1349333/2995153084.py:36: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -62,8 +87,8 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "INFERENCE = False\n",
-    "EXP_NAME = \"transformer_dur_8640_sigma_12_fold_3\"\n",
+    "INFERENCE = True\n",
+    "EXP_NAME = \"transformer_dur_8640_folds\"\n",
     "RUN_NAME = \"run0\"\n",
     "TYPE = \"score\"\n",
     "\n",
@@ -113,18 +138,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0.7781458996932683, 93216)"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "index 2 is out of bounds for axis 2 with size 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/alex/Kaggle/DSS/notebook/eda001.ipynb Cell 4\u001b[0m line \u001b[0;36m6\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/alex/Kaggle/DSS/notebook/eda001.ipynb#W3sZmlsZQ%3D%3D?line=60'>61</a>\u001b[0m     sub_df \u001b[39m=\u001b[39m sub_df\u001b[39m.\u001b[39mwith_columns(row_ids)\u001b[39m.\u001b[39mselect([\u001b[39m\"\u001b[39m\u001b[39mrow_id\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mseries_id\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mstep\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mevent\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mscore\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/alex/Kaggle/DSS/notebook/eda001.ipynb#W3sZmlsZQ%3D%3D?line=61'>62</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m sub_df, sleep_diffs\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/alex/Kaggle/DSS/notebook/eda001.ipynb#W3sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m pred_df, sleep_diffs \u001b[39m=\u001b[39m post_process_for_seg(keys, preds, score_th\u001b[39m=\u001b[39;49m\u001b[39m0.0002\u001b[39;49m, distance\u001b[39m=\u001b[39;49m\u001b[39m80\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/alex/Kaggle/DSS/notebook/eda001.ipynb#W3sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m pred_df \u001b[39m=\u001b[39m pred_df\u001b[39m.\u001b[39mto_pandas()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/alex/Kaggle/DSS/notebook/eda001.ipynb#W3sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m score \u001b[39m=\u001b[39m event_detection_ap(gt_df, pred_df)\n",
+      "\u001b[1;32m/home/alex/Kaggle/DSS/notebook/eda001.ipynb Cell 4\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/alex/Kaggle/DSS/notebook/eda001.ipynb#W3sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m series_idx \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mwhere(series_ids \u001b[39m==\u001b[39m series_id)[\u001b[39m0\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/alex/Kaggle/DSS/notebook/eda001.ipynb#W3sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m this_series_sleeps \u001b[39m=\u001b[39m preds[series_idx][:, :, [\u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m]]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/alex/Kaggle/DSS/notebook/eda001.ipynb#W3sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m this_series_preds \u001b[39m=\u001b[39m preds[series_idx][:, :, [\u001b[39m1\u001b[39;49m, \u001b[39m2\u001b[39;49m]]\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/alex/Kaggle/DSS/notebook/eda001.ipynb#W3sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m sleep_diffs \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdiff(this_series_sleeps[:, :, \u001b[39m0\u001b[39m], prepend\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m.\u001b[39mflatten()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/alex/Kaggle/DSS/notebook/eda001.ipynb#W3sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m mask \u001b[39m=\u001b[39m (sleep_diffs \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m) \u001b[39m&\u001b[39m (sleep_diffs \u001b[39m<\u001b[39m \u001b[39m0.0001\u001b[39m)\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 2 is out of bounds for axis 2 with size 2"
+     ]
     }
    ],
    "source": [
@@ -459,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -483,15 +510,16 @@
      "output_type": "stream",
      "text": [
       "Global seed set to 42\n",
-      "[5.0GB(+3.9GB):13.4sec] load test dataloader \n",
-      "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_0.pth\n",
-      "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_3.pth\n",
-      "[5.4GB(+0.4GB):2.5sec] load model \n",
-      "inference: 100%|████████████████████████████| 3733/3733 [03:02<00:00, 20.48it/s]\n",
-      "[6.6GB(+1.1GB):190.8sec] inference \n",
-      "inference: 100%|████████████████████████████| 3733/3733 [03:03<00:00, 20.30it/s]\n",
-      "[7.0GB(+0.5GB):197.9sec] inference \n",
-      "[7.1GB(+0.1GB):2.2sec] make submission \n"
+      "[5.0GB(+3.9GB):2.1sec] load test dataloader \n",
+      "/home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/*.pth\n",
+      "[5.0GB(+0.0GB):0.0sec] load model \n",
+      "Error executing job with overrides: ['dir=local', 'model.params.encoder_name=resnet34', 'model.params.encoder_weights=null', 'num_workers=2', 'exp_name=transformer_dur_8640_folds', 'weight.run_name=single', 'batch_size=4', 'duration=8640', 'downsample_rate=2', 'pp.score_th=0.0001', 'pp.distance=90', 'phase=train', 'best_model=ensemble']\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/alex/Kaggle/DSS/run/inference.py\", line 161, in main\n",
+      "    preds /= len(models)\n",
+      "TypeError: unsupported operand type(s) for /=: 'NoneType' and 'int'\n",
+      "\n",
+      "Set the environment variable HYDRA_FULL_ERROR=1 for a complete stack trace.\n"
      ]
     }
    ],
