Add saving of predictions in local mode

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -510,14 +510,17 @@
      "output_type": "stream",
      "text": [
       "Global seed set to 42\n",
-      "[5.0GB(+3.9GB):2.1sec] load test dataloader \n",
+      "[5.0GB(+3.9GB):2.0sec] load test dataloader \n",
       "/home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/*.pth\n",
-      "[5.0GB(+0.0GB):0.0sec] load model \n",
+      "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_0.pth\n",
+      "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_3.pth\n",
+      "[5.4GB(+0.4GB):1.0sec] load model \n",
+      "inference: 100%|████████████████████████████| 3733/3733 [01:34<00:00, 39.61it/s]\n",
       "Error executing job with overrides: ['dir=local', 'model.params.encoder_name=resnet34', 'model.params.encoder_weights=null', 'num_workers=2', 'exp_name=transformer_dur_8640_folds', 'weight.run_name=single', 'batch_size=4', 'duration=8640', 'downsample_rate=2', 'pp.score_th=0.0001', 'pp.distance=90', 'phase=train', 'best_model=ensemble']\n",
       "Traceback (most recent call last):\n",
-      "  File \"/home/alex/Kaggle/DSS/run/inference.py\", line 161, in main\n",
-      "    preds /= len(models)\n",
-      "TypeError: unsupported operand type(s) for /=: 'NoneType' and 'int'\n",
+      "  File \"/home/alex/Kaggle/DSS/run/inference.py\", line 153, in main\n",
+      "    np.save(Path(cfg.dir.sub_dir) / f\"keys_{i}.npy\", tmp_keys) # !!!\n",
+      "NameError: name 'i' is not defined\n",
       "\n",
       "Set the environment variable HYDRA_FULL_ERROR=1 for a complete stack trace.\n"
      ]
