--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -6,15 +6,19 @@
    "source": [
     "# Ideas\n",
     "\n",
+    "- exclude series_ids that aren't labeleled at all\n",
+    "- there are series (at least 7) that contain night events but there are no labels at these nights; examples: 03d92c9f6f8a, 05e1944c3818\n",
+    "try to find and exclude that nights\n",
     "\n",
-    "- different feature extractor type (LSTM, PANN, SpecFeatureExtractor)\n",
+    "- different feature extractor type (LSTM, SpecFeatureExtractor)\n",
     "- different decoder type (MLP, LSTM)\n",
     "- train on full data\n",
     "\n",
     "- different optimizer (Lion, Adam, SGD), increase WD\n",
     "- offset 25, 30 for your best model\n",
     "\n",
-    "- linknet, fpnet are good, should try\n",
+    "- decoder backbones LinkNet and FPNet are good, should try\n",
+    "- PANN feature extractor is good enough\n",
     "- use stacking with ensemble\n",
     "\n",
     "- DETR2DCNN\n",
@@ -27,14 +31,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
+       "                (function() {\n",
+       "                    if (window.IPython === undefined) {\n",
+       "                        return\n",
+       "                    }\n",
+       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
+       "                        \"jupyter_black in a non-lab notebook with \" +\n",
+       "                        \"`is_lab=True`. Please double check, and if \" +\n",
+       "                        \"loading with `%load_ext` please review the README!\"\n",
+       "                    console.log(msg)\n",
+       "                    alert(msg)\n",
+       "                })()\n",
+       "                </script>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1349333/296101374.py:36: UserWarning: \n",
+      "/tmp/ipykernel_1394675/1475794437.py:36: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -84,8 +114,7 @@
     "\n",
     "    return cfg\n",
     "\n",
-    "\n",
-    "hydra_result_dir = Path(\"../output/train\") / \"transformer_dur_8640_sigma_12_fold_3\" / \"run0\"\n",
+    "hydra_result_dir = Path(\"../output/train\") / \"transformer_dur_8640_sigma_12_baseline\" / \"run0\"\n",
     "cfg = load_config(hydra_result_dir)\n",
     "\n",
     "if INFERENCE:\n",
@@ -112,16 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.801815519711492, 90737)"
+       "(0.7625612051745636, 66403)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,66 +160,7 @@
     "import polars as pl\n",
     "from scipy.signal import find_peaks\n",
     "\n",
-    "# def post_process_for_seg(\n",
-    "#     keys: list[str], preds: np.ndarray, score_th: float = 0.01, distance: int = 5000\n",
-    "# ) -> pl.DataFrame:\n",
-    "#     \"\"\"make submission dataframe for segmentation task\n",
-    "\n",
-    "#     Args:\n",
-    "#         keys (list[str]): list of keys. key is \"{series_id}_{chunk_id}\"\n",
-    "#         preds (np.ndarray): (num_series * num_chunks, duration, 2)\n",
-    "#         score_th (float, optional): threshold for score. Defaults to 0.5.\n",
-    "\n",
-    "#     Returns:\n",
-    "#         pl.DataFrame: submission dataframe\n",
-    "#     \"\"\"\n",
-    "#     series_ids = np.array(list(map(lambda x: x.split(\"_\")[0], keys)))\n",
-    "#     unique_series_ids = np.unique(series_ids)\n",
-    "\n",
-    "#     records = []\n",
-    "#     for series_id in unique_series_ids:\n",
-    "#         series_idx = np.where(series_ids == series_id)[0]\n",
-    "#         this_series_sleeps = preds[series_idx][:, :, [0, 0]]\n",
-    "#         this_series_preds = preds[series_idx][:, :, [1, 2]].reshape(-1, 2)\n",
-    "\n",
-    "#         sleep_diffs = np.diff(this_series_sleeps[:, :, 0], prepend=1).flatten()\n",
-    "#         mask = (sleep_diffs > 0) & (sleep_diffs < 0.0001)\n",
-    "#         this_series_preds[mask, 0] += sleep_diffs[mask]\n",
-    "#         mask = (sleep_diffs < 0) & (sleep_diffs > -0.001)\n",
-    "#         this_series_preds[mask, 1] -= sleep_diffs[mask]\n",
-    "\n",
-    "#         for i, event_name in enumerate([\"onset\", \"wakeup\"]):\n",
-    "#             this_event_preds = this_series_preds[:, i]\n",
-    "#             steps = find_peaks(this_event_preds, height=score_th, distance=distance)[0]\n",
-    "#             scores = this_event_preds[steps]\n",
-    "\n",
-    "#             for step, score in zip(steps, scores):\n",
-    "#                 records.append(\n",
-    "#                     {\n",
-    "#                         \"series_id\": series_id,\n",
-    "#                         \"step\": step,\n",
-    "#                         \"event\": event_name,\n",
-    "#                         \"score\": score,\n",
-    "#                     }\n",
-    "#                 )\n",
-    "\n",
-    "#     if len(records) == 0:  # If there is no prediction, insert dummy\n",
-    "#         records.append(\n",
-    "#             {\n",
-    "#                 \"series_id\": series_id,\n",
-    "#                 \"step\": 0,\n",
-    "#                 \"event\": \"onset\",\n",
-    "#                 \"score\": 0,\n",
-    "#             }\n",
-    "#         )\n",
-    "\n",
-    "#     sub_df = pl.DataFrame(records).sort(by=[\"series_id\", \"step\"])\n",
-    "#     row_ids = pl.Series(name=\"row_id\", values=np.arange(len(sub_df)))\n",
-    "#     sub_df = sub_df.with_columns(row_ids).select([\"row_id\", \"series_id\", \"step\", \"event\", \"score\"])\n",
-    "#     return sub_df, sleep_diffs\n",
-    "\n",
-    "\n",
-    "pred_df = post_process_for_seg(keys_0, preds_0, score_th=0.0015, distance=70)\n",
+    "pred_df = post_process_for_seg(keys_0, preds_0, score_th=0.002, distance=70)\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
@@ -200,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,13 +396,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Config\n",
     "BEST_MODEL = \"ensemble\"\n",
-    "FOLD = 0\n",
     "\n",
     "DURATION = 8640\n",
     "DOWNSAMPLE_RATE = 2\n",
@@ -442,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -454,12 +423,11 @@
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_0.pth\n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_3.pth\n",
       "[5.4GB(+0.4GB):1.0sec] load model \n",
-      "local\n",
-      "inference: 100%|████████████████████████████| 3733/3733 [01:29<00:00, 41.50it/s]\n",
-      "[7.0GB(+1.6GB):91.0sec] inference \n",
-      "inference: 100%|████████████████████████████| 3733/3733 [01:34<00:00, 39.43it/s]\n",
-      "[7.7GB(+0.7GB):98.7sec] inference \n",
-      "[7.8GB(+0.0GB):0.1sec] make submission \n"
+      "inference: 100%|████████████████████████████| 3733/3733 [01:31<00:00, 40.71it/s]\n",
+      "[7.0GB(+1.6GB):92.8sec] inference \n",
+      "inference: 100%|████████████████████████████| 3733/3733 [01:37<00:00, 38.41it/s]\n",
+      "[7.7GB(+0.7GB):101.3sec] inference \n",
+      "[7.8GB(+0.0GB):0.0sec] make submission \n"
      ]
     }
    ],
@@ -468,10 +436,10 @@
     "    dir=local\\\n",
     "    model.params.encoder_name=resnet34\\\n",
     "    model.params.encoder_weights=null\\\n",
-    "    num_workers=2\\\n",
+    "    num_workers=12\\\n",
     "    exp_name=$EXP_NAME\\\n",
     "    weight.run_name=single\\\n",
-    "    batch_size=4\\\n",
+    "    batch_size=8\\\n",
     "    duration=$DURATION\\\n",
     "    downsample_rate=$DOWNSAMPLE_RATE\\\n",
     "    pp.score_th=0.0001\\\n",
