Figure out fold distribution

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -31,40 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
-       "                (function() {\n",
-       "                    if (window.IPython === undefined) {\n",
-       "                        return\n",
-       "                    }\n",
-       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
-       "                        \"jupyter_black in a non-lab notebook with \" +\n",
-       "                        \"`is_lab=True`. Please double check, and if \" +\n",
-       "                        \"loading with `%load_ext` please review the README!\"\n",
-       "                    console.log(msg)\n",
-       "                    alert(msg)\n",
-       "                })()\n",
-       "                </script>\n",
-       "                "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1394675/1475794437.py:36: UserWarning: \n",
+      "/tmp/ipykernel_1403028/3587111114.py:36: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -114,7 +88,12 @@
     "\n",
     "    return cfg\n",
     "\n",
-    "hydra_result_dir = Path(\"../output/train\") / \"transformer_dur_8640_sigma_12_baseline\" / \"run0\"\n",
+    "\n",
+    "hydra_result_dir = (\n",
+    "    Path(\"../output/train\")\n",
+    "    / \"transformer_dur_8640_folds/transformer_dur_8640_sigma_12_folds_0_1_2_4\"\n",
+    "    / \"run3\"\n",
+    ")\n",
     "cfg = load_config(hydra_result_dir)\n",
     "\n",
     "if INFERENCE:\n",
@@ -141,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7625612051745636, 66403)"
+       "(0.8011164190991676, 74292)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +139,7 @@
     "import polars as pl\n",
     "from scipy.signal import find_peaks\n",
     "\n",
-    "pred_df = post_process_for_seg(keys_0, preds_0, score_th=0.002, distance=70)\n",
+    "pred_df = post_process_for_seg(keys_0, preds, score_th=0.002, distance=70)\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
@@ -396,12 +375,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Config\n",
     "BEST_MODEL = \"ensemble\"\n",
+    "FOLD = 0\n",
     "\n",
     "DURATION = 8640\n",
     "DOWNSAMPLE_RATE = 2\n",
@@ -411,7 +391,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed train dir: /home/alex/Kaggle/DSS/processed_data/train\n",
+      "[8.3GB(+8.2GB):26.1sec] Load series \n",
+      "  0%|                                                   | 0/277 [00:00<?, ?it/s]/home/alex/Kaggle/DSS/run/prepare_data.py:61: TimeZoneAwareConstructorWarning: Constructing a Series with time-zone-aware datetimes results in a Series with UTC time zone. To silence this warning, you can filter warnings of class TimeZoneAwareConstructorWarning, or set 'UTC' as the time zone of your datatype.\n",
+      "  tmp = pl.from_dict(s).transpose(include_header=True, column_names=['timestamp'])\n",
+      "100%|█████████████████████████████████████████| 277/277 [00:31<00:00,  8.81it/s]\n",
+      "[5.4GB(-2.9GB):31.5sec] Save features \n"
+     ]
+    }
+   ],
+   "source": [
+    "!python -m run.prepare_data dir=local phase=train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -419,15 +421,15 @@
      "output_type": "stream",
      "text": [
       "Global seed set to 42\n",
-      "[5.0GB(+3.9GB):2.1sec] load test dataloader \n",
+      "[5.0GB(+3.9GB):2.0sec] load test dataloader \n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_0.pth\n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_3.pth\n",
       "[5.4GB(+0.4GB):1.0sec] load model \n",
-      "inference: 100%|████████████████████████████| 3733/3733 [01:31<00:00, 40.71it/s]\n",
-      "[7.0GB(+1.6GB):92.8sec] inference \n",
-      "inference: 100%|████████████████████████████| 3733/3733 [01:37<00:00, 38.41it/s]\n",
-      "[7.7GB(+0.7GB):101.3sec] inference \n",
-      "[7.8GB(+0.0GB):0.0sec] make submission \n"
+      "inference: 100%|████████████████████████████| 1867/1867 [01:23<00:00, 22.33it/s]\n",
+      "[7.1GB(+1.7GB):84.6sec] inference \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [01:21<00:00, 22.86it/s]\n",
+      "[7.9GB(+0.8GB):85.8sec] inference \n",
+      "[7.9GB(+0.0GB):0.0sec] make submission \n"
      ]
     }
    ],
