--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1403028/3587111114.py:36: UserWarning: \n",
+      "/tmp/ipykernel_1404856/3587111114.py:36: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -120,16 +120,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>series_id</th>\n",
+       "      <th>night</th>\n",
+       "      <th>event</th>\n",
+       "      <th>step</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>854206f602d0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>onset</td>\n",
+       "      <td>5016.0</td>\n",
+       "      <td>2018-09-21T19:58:00-0400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>854206f602d0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>wakeup</td>\n",
+       "      <td>12444.0</td>\n",
+       "      <td>2018-09-22T06:17:00-0400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>854206f602d0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>onset</td>\n",
+       "      <td>58020.0</td>\n",
+       "      <td>2018-09-24T21:35:00-0400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>854206f602d0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>wakeup</td>\n",
+       "      <td>65148.0</td>\n",
+       "      <td>2018-09-25T07:29:00-0400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>854206f602d0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>onset</td>\n",
+       "      <td>266052.0</td>\n",
+       "      <td>2018-10-06T22:31:00-0400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1771</th>\n",
+       "      <td>c75b4b207bea</td>\n",
+       "      <td>25</td>\n",
+       "      <td>wakeup</td>\n",
+       "      <td>427584.0</td>\n",
+       "      <td>2019-03-30T06:52:00-0400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1772</th>\n",
+       "      <td>c75b4b207bea</td>\n",
+       "      <td>26</td>\n",
+       "      <td>onset</td>\n",
+       "      <td>437316.0</td>\n",
+       "      <td>2019-03-30T20:23:00-0400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1773</th>\n",
+       "      <td>c75b4b207bea</td>\n",
+       "      <td>26</td>\n",
+       "      <td>wakeup</td>\n",
+       "      <td>445308.0</td>\n",
+       "      <td>2019-03-31T07:29:00-0400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1774</th>\n",
+       "      <td>c75b4b207bea</td>\n",
+       "      <td>27</td>\n",
+       "      <td>onset</td>\n",
+       "      <td>456036.0</td>\n",
+       "      <td>2019-03-31T22:23:00-0400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1775</th>\n",
+       "      <td>c75b4b207bea</td>\n",
+       "      <td>27</td>\n",
+       "      <td>wakeup</td>\n",
+       "      <td>462132.0</td>\n",
+       "      <td>2019-04-01T06:51:00-0400</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1776 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         series_id  night   event      step                 timestamp\n",
+       "0     854206f602d0      1   onset    5016.0  2018-09-21T19:58:00-0400\n",
+       "1     854206f602d0      1  wakeup   12444.0  2018-09-22T06:17:00-0400\n",
+       "2     854206f602d0      4   onset   58020.0  2018-09-24T21:35:00-0400\n",
+       "3     854206f602d0      4  wakeup   65148.0  2018-09-25T07:29:00-0400\n",
+       "4     854206f602d0     16   onset  266052.0  2018-10-06T22:31:00-0400\n",
+       "...            ...    ...     ...       ...                       ...\n",
+       "1771  c75b4b207bea     25  wakeup  427584.0  2019-03-30T06:52:00-0400\n",
+       "1772  c75b4b207bea     26   onset  437316.0  2019-03-30T20:23:00-0400\n",
+       "1773  c75b4b207bea     26  wakeup  445308.0  2019-03-31T07:29:00-0400\n",
+       "1774  c75b4b207bea     27   onset  456036.0  2019-03-31T22:23:00-0400\n",
+       "1775  c75b4b207bea     27  wakeup  462132.0  2019-04-01T06:51:00-0400\n",
+       "\n",
+       "[1776 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gt_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.8011164190991676, 74292)"
+       "(0.8016464598518964, 104579)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +292,7 @@
     "import polars as pl\n",
     "from scipy.signal import find_peaks\n",
     "\n",
-    "pred_df = post_process_for_seg(keys_0, preds, score_th=0.002, distance=70)\n",
+    "pred_df = post_process_for_seg(keys_0, preds, score_th=0.0015, distance=70)\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
@@ -153,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# (0.801815519711492, 90737)"
+    "# (0.8016464598518964, 104579)"
    ]
   },
   {
