--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -10,15 +10,14 @@
     "- there are series (at least 7) that contain night events but there are no labels at these nights; examples: 03d92c9f6f8a, 05e1944c3818\n",
     "try to find and exclude that nights\n",
     "\n",
-    "- different feature extractor type (SpecFeatureExtractor)\n",
-    "- different decoder type (MLP, LSTM)\n",
+    "- different decoder type (MLP, LSTM (if LSTM not totally bad, then try it with LSTM encoder))\n",
+    "- different model type (detr2D, spec1D)\n",
     "- train on full data\n",
     "\n",
     "- different optimizer (Lion, Adam, SGD), increase WD\n",
     "- offset 25, 30 for your best model\n",
     "\n",
     "- decoder backbones LinkNet and FPNet are good, should try\n",
-    "- PANN feature extractor is good enough\n",
     "- use stacking with ensemble\n",
     "\n",
     "- DETR2DCNN\n",
@@ -31,14 +30,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
+       "                (function() {\n",
+       "                    if (window.IPython === undefined) {\n",
+       "                        return\n",
+       "                    }\n",
+       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
+       "                        \"jupyter_black in a non-lab notebook with \" +\n",
+       "                        \"`is_lab=True`. Please double check, and if \" +\n",
+       "                        \"loading with `%load_ext` please review the README!\"\n",
+       "                    console.log(msg)\n",
+       "                    alert(msg)\n",
+       "                })()\n",
+       "                </script>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1404856/3587111114.py:36: UserWarning: \n",
+      "/tmp/ipykernel_1430954/1862073780.py:42: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -65,15 +90,21 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "INFERENCE = True\n",
-    "EXP_NAME = \"transformer_dur_8640_folds\"\n",
+    "INFERENCE = False\n",
+    "EXP_NAME = \"transformer_dur_8640_sigma_12_lstm_feat_ext\"\n",
     "RUN_NAME = \"run0\"\n",
     "TYPE = \"score\"\n",
     "\n",
     "if INFERENCE:\n",
     "    RESULT_DIR = Path(\"../output/inference\") / EXP_NAME  # / RUN_NAME\n",
+    "    hydra_result_dir = (\n",
+    "        Path(\"../output/train\")\n",
+    "        / \"transformer_dur_8640_folds/transformer_dur_8640_sigma_12_folds_0_1_2_4\"\n",
+    "        / \"run3\"\n",
+    "    )\n",
     "else:\n",
     "    RESULT_DIR = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
+    "    hydra_result_dir = Path(\"../output/train\") / EXP_NAME / RUN_NAME\n",
     "\n",
     "\n",
     "def load_config(result_dir: Path):\n",
@@ -89,11 +120,6 @@
     "    return cfg\n",
     "\n",
     "\n",
-    "hydra_result_dir = (\n",
-    "    Path(\"../output/train\")\n",
-    "    / \"transformer_dur_8640_folds/transformer_dur_8640_sigma_12_folds_0_1_2_4\"\n",
-    "    / \"run3\"\n",
-    ")\n",
     "cfg = load_config(hydra_result_dir)\n",
     "\n",
     "if INFERENCE:\n",
@@ -120,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.8015053690090803, 86042)"
+       "(0.7724649259056395, 42897)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +165,7 @@
     "import polars as pl\n",
     "from scipy.signal import find_peaks\n",
     "\n",
-    "pred_df = post_process_for_seg(keys_0, preds, score_th=0.002, distance=70)\n",
+    "pred_df = post_process_for_seg(keys, preds, score_th=0.0001, distance=100)\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
@@ -149,11 +175,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# (0.8015053690090803, 86042)"
+    "# (0.7724649259056395, 42897) - score_th=0.0001, distance=100"
    ]
   },
   {
