--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -10,7 +10,7 @@
     "- there are series (at least 7) that contain night events but there are no labels at these nights; examples: 03d92c9f6f8a, 05e1944c3818\n",
     "try to find and exclude that nights\n",
     "\n",
-    "- different decoder type (MLP, LSTM (if LSTM not totally bad, then try it with LSTM encoder))\n",
+    "- different decoder type (MLP)\n",
     "- different model type (detr2D, spec1D)\n",
     "- train on full data\n",
     "\n",
