--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -10,12 +10,11 @@
     "- there are series (at least 7) that contain night events but there are no labels at these nights; examples: 03d92c9f6f8a, 05e1944c3818\n",
     "try to find and exclude that nights\n",
     "\n",
-    "- different decoder type (MLP)\n",
     "- different model type (detr2D, spec1D)\n",
-    "- train on full data\n",
     "\n",
     "- different optimizer (Lion, Adam, SGD), increase WD\n",
     "- offset 25, 30 for your best model\n",
+    "- train on full data\n",
     "\n",
     "- decoder backbones LinkNet and FPNet are good, should try\n",
     "- use stacking with ensemble\n",
@@ -401,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -425,15 +424,15 @@
      "output_type": "stream",
      "text": [
       "Global seed set to 42\n",
-      "[5.0GB(+3.9GB):1.9sec] load test dataloader \n",
+      "[5.0GB(+3.9GB):2.0sec] load test dataloader \n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_0.pth\n",
       "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_3.pth\n",
       "[5.4GB(+0.4GB):1.0sec] load model \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:23<00:00, 22.45it/s]\n",
-      "[7.1GB(+1.6GB):83.3sec] inference \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:23<00:00, 22.47it/s]\n",
-      "[7.9GB(+0.8GB):86.2sec] inference \n",
-      "[8.3GB(+0.5GB):14.7sec] make submission \n"
+      "inference: 100%|████████████████████████████| 1867/1867 [01:20<00:00, 23.12it/s]\n",
+      "[7.1GB(+1.6GB):80.9sec] inference \n",
+      "inference: 100%|████████████████████████████| 1867/1867 [01:19<00:00, 23.38it/s]\n",
+      "[7.8GB(+0.7GB):83.0sec] inference \n",
+      "[8.0GB(+0.2GB):8.1sec] make submission \n"
      ]
     }
    ],
@@ -448,10 +447,60 @@
     "    batch_size=8\\\n",
     "    duration=$DURATION\\\n",
     "    downsample_rate=$DOWNSAMPLE_RATE\\\n",
-    "    pp.score_th=0.0001\\\n",
+    "    pp.score_th=0.001\\\n",
     "    pp.distance=90\\\n",
     "    phase=$PHASE\\\n",
     "    best_model=$BEST_MODEL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = pd.read_csv('submission.csv')\n",
+    "y = pd.read_csv('submission1.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1374455, 5)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1374421, 5)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape"
    ]
   }
  ],
