Fix bug in postprocess file

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -62,7 +62,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1430954/1862073780.py:42: UserWarning: \n",
+      "/tmp/ipykernel_89992/1300806280.py:42: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -89,13 +89,13 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "INFERENCE = False\n",
-    "EXP_NAME = \"transformer_dur_8640_sigma_12_lstm_feat_ext\"\n",
+    "INFERENCE = True\n",
+    "EXP_NAME = \"transformer_dur_8640_sigma_12_folds\"\n",
     "RUN_NAME = \"run0\"\n",
     "TYPE = \"score\"\n",
     "\n",
     "if INFERENCE:\n",
-    "    RESULT_DIR = Path(\"../output/inference\") / EXP_NAME  # / RUN_NAME\n",
+    "    RESULT_DIR = Path(\"../output/inference\") / \"transformer_dur_8640_folds\"\n",
     "    hydra_result_dir = (\n",
     "        Path(\"../output/train\")\n",
     "        / \"transformer_dur_8640_folds/transformer_dur_8640_sigma_12_folds_0_1_2_4\"\n",
@@ -145,16 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7724649259056395, 42897)"
+       "(0.8018954275977875, 87136)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
     "import polars as pl\n",
     "from scipy.signal import find_peaks\n",
     "\n",
-    "pred_df = post_process_for_seg(keys, preds, score_th=0.0001, distance=100)\n",
+    "pred_df = post_process_for_seg(keys_0, preds, score_th=0.0025, distance=70)\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
