Return CNNSpectrogram back

--- a/notebook/eda001.ipynb
+++ b/notebook/eda001.ipynb
@@ -29,14 +29,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
+       "                (function() {\n",
+       "                    if (window.IPython === undefined) {\n",
+       "                        return\n",
+       "                    }\n",
+       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
+       "                        \"jupyter_black in a non-lab notebook with \" +\n",
+       "                        \"`is_lab=True`. Please double check, and if \" +\n",
+       "                        \"loading with `%load_ext` please review the README!\"\n",
+       "                    console.log(msg)\n",
+       "                    alert(msg)\n",
+       "                })()\n",
+       "                </script>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_94669/2833521180.py:42: UserWarning: \n",
+      "/tmp/ipykernel_140508/2658981604.py:42: UserWarning: \n",
       "The version_base parameter is not specified.\n",
       "Please specify a compatability version level, or None.\n",
       "Will assume defaults for version 1.1\n",
@@ -63,8 +89,8 @@
     "jupyter_black.load()\n",
     "plt.style.use(\"ggplot\")\n",
     "\n",
-    "INFERENCE = False\n",
-    "EXP_NAME = \"transformer_dur_8640_lstm_folds\"\n",
+    "INFERENCE = True\n",
+    "EXP_NAME = \"transformer_dur_8640_folds\"\n",
     "RUN_NAME = \"run0\"\n",
     "TYPE = \"score\"\n",
     "\n",
@@ -119,16 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7725863698678378, 46867)"
+       "(0.001451376336140042, 1619593)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +164,7 @@
     "import polars as pl\n",
     "from scipy.signal import find_peaks\n",
     "\n",
-    "pred_df = post_process_for_seg(keys, preds, score_th=0.0001, distance=90)\n",
+    "pred_df = post_process_for_seg(keys_0, preds, score_th=0.0005, distance=90)\n",
     "\n",
     "pred_df = pred_df.to_pandas()\n",
     "score = event_detection_ap(gt_df, pred_df)\n",
@@ -375,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -399,15 +425,22 @@
      "output_type": "stream",
      "text": [
       "Global seed set to 42\n",
-      "[5.0GB(+3.9GB):2.0sec] load test dataloader \n",
-      "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_0.pth\n",
-      "load weight from /home/alex/Kaggle/DSS/output/train/transformer_dur_8640_folds/fold_3.pth\n",
-      "[5.4GB(+0.4GB):1.0sec] load model \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:20<00:00, 23.12it/s]\n",
-      "[7.1GB(+1.6GB):80.9sec] inference \n",
-      "inference: 100%|████████████████████████████| 1867/1867 [01:19<00:00, 23.38it/s]\n",
-      "[7.8GB(+0.7GB):83.0sec] inference \n",
-      "[8.0GB(+0.2GB):8.1sec] make submission \n"
+      "[5.0GB(+3.9GB):1.9sec] load test dataloader \n",
+      "Error executing job with overrides: ['dir=local', 'model.params.encoder_name=resnet34', 'model.params.encoder_weights=null', 'num_workers=12', 'exp_name=transformer_dur_8640_folds', 'weight.run_name=single', 'batch_size=8', 'duration=8640', 'downsample_rate=2', 'pp.score_th=0.0001', 'pp.distance=90', 'phase=train', 'best_model=ensemble']\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/alex/Kaggle/DSS/run/inference.py\", line 142, in main\n",
+      "    models = load_model(cfg, weights)\n",
+      "  File \"/home/alex/Kaggle/DSS/run/inference.py\", line 55, in load_model\n",
+      "    model.load_state_dict(torch.load(weight_path))\n",
+      "  File \"/home/alex/Kaggle/DSS/.venv/lib/python3.10/site-packages/torch/nn/modules/module.py\", line 2152, in load_state_dict\n",
+      "    raise RuntimeError('Error(s) in loading state_dict for {}:\\n\\t{}'.format(\n",
+      "RuntimeError: Error(s) in loading state_dict for Spec2DCNN:\n",
+      "\tMissing key(s) in state_dict: \"feature_extractor.fc.weight\", \"feature_extractor.fc.bias\", \"feature_extractor.conv.weight\", \"feature_extractor.conv.bias\", \"feature_extractor.lstm.weight_ih_l0\", \"feature_extractor.lstm.weight_hh_l0\", \"feature_extractor.lstm.bias_ih_l0\", \"feature_extractor.lstm.bias_hh_l0\", \"feature_extractor.lstm.weight_ih_l0_reverse\", \"feature_extractor.lstm.weight_hh_l0_reverse\", \"feature_extractor.lstm.bias_ih_l0_reverse\", \"feature_extractor.lstm.bias_hh_l0_reverse\", \"feature_extractor.lstm.weight_ih_l1\", \"feature_extractor.lstm.weight_hh_l1\", \"feature_extractor.lstm.bias_ih_l1\", \"feature_extractor.lstm.bias_hh_l1\", \"feature_extractor.lstm.weight_ih_l1_reverse\", \"feature_extractor.lstm.weight_hh_l1_reverse\", \"feature_extractor.lstm.bias_ih_l1_reverse\", \"feature_extractor.lstm.bias_hh_l1_reverse\". \n",
+      "\tUnexpected key(s) in state_dict: \"feature_extractor.spec_conv.0.weight\", \"feature_extractor.spec_conv.0.bias\", \"feature_extractor.spec_conv.1.weight\", \"feature_extractor.spec_conv.1.bias\", \"feature_extractor.spec_conv.2.weight\", \"feature_extractor.spec_conv.2.bias\". \n",
+      "\tsize mismatch for encoder.encoder.conv1.weight: copying a param with shape torch.Size([64, 3, 7, 7]) from checkpoint, the shape in current model is torch.Size([64, 1, 7, 7]).\n",
+      "\tsize mismatch for decoder.conv.weight: copying a param with shape torch.Size([256, 64, 1]) from checkpoint, the shape in current model is torch.Size([256, 128, 1]).\n",
+      "\n",
+      "Set the environment variable HYDRA_FULL_ERROR=1 for a complete stack trace.\n"
      ]
     }
    ],
@@ -415,6 +448,7 @@
     "!python -m run.inference\\\n",
     "    dir=local\\\n",
     "    model.params.encoder_name=resnet34\\\n",
+    "    feature_extractor=CNNSpectrogram\\\n",
     "    model.params.encoder_weights=null\\\n",
     "    num_workers=12\\\n",
     "    exp_name=$EXP_NAME\\\n",
@@ -422,60 +456,10 @@
     "    batch_size=8\\\n",
     "    duration=$DURATION\\\n",
     "    downsample_rate=$DOWNSAMPLE_RATE\\\n",
-    "    pp.score_th=0.001\\\n",
+    "    pp.score_th=0.0001\\\n",
     "    pp.distance=90\\\n",
     "    phase=$PHASE\\\n",
     "    best_model=$BEST_MODEL"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = pd.read_csv('submission.csv')\n",
-    "y = pd.read_csv('submission1.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1374455, 5)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1374421, 5)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.shape"
    ]
   }
  ],
